--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".JavaBahcesi2.JavaBahcesiButton2_5"></activity>
+        <activity android:name=".JavaBahcesi3.JavaBahcesiButton3_3"></activity>
+        <activity android:name=".JavaBahcesi3.JavaBahcesiButton3_2" />
+        <activity android:name=".JavaBahcesi3.JavaBahcesiButton3_1" />
+        <activity android:name=".JavaBahcesi2.JavaBahcesiButton2_5" />
         <activity android:name=".JavaBahcesi2.JavaBahcesiButton2_4" />
         <activity android:name=".JavaBahcesi2.JavaBahcesiButton2_3" />
         <activity android:name=".JavaBahcesi2.JavaBahcesiButton2_2" />
