--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesiActivity"></activity>
+        <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_7"></activity>
+        <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_6" />
+        <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_5" />
+        <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_4" />
+        <activity android:name=".AlgoritmaBahcesiActivity" />
         <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_3" />
         <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_2" />
         <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_1" />
