--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_7"></activity>
+        <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_4"></activity>
+        <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_3" />
+        <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_2" />
+        <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_1" />
+        <activity android:name=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_7" />
+        <activity android:name=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_6" />
+        <activity android:name=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_5" />
+        <activity android:name=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_4" />
+        <activity android:name=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_3" />
+        <activity android:name=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_2" />
+        <activity android:name=".AlgoritmaBahcesi2.AlgoritmaBahcesiButton2_1" />
+        <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_7" />
         <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_6" />
         <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_5" />
         <activity android:name=".AlgoritmaBahcesi1.AlgoritmaBahcesiButton1_4" />
