--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_4"></activity>
+        <activity android:name=".AlgoritmaBahcesi4.AlgoritmaBahcesiButton4_2"></activity>
+        <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_6" />
+        <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_5" />
+        <activity android:name=".AlgoritmaBahcesi4.AlgoritmaBahcesiButton4_1" />
+        <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_4" />
         <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_3" />
         <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_2" />
         <activity android:name=".AlgoritmaBahcesi3.AlgoritmaBahcesiButton3_1" />
