--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_1"></activity>
+        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_7"></activity>
+        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_6" />
+        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_5" />
+        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_4" />
+        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_3" />
+        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_2" />
+        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_1" />
         <activity android:name=".AlgoritmaBahcesi4.AlgoritmaBahcesiButton4_4" />
         <activity android:name=".AlgoritmaBahcesi4.AlgoritmaBahcesiButton4_3" />
         <activity android:name=".AlgoritmaBahcesi4.AlgoritmaBahcesiButton4_2" />
