--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_7"></activity>
+        <activity android:name=".AlgoritmaBahcesi6.AlgoritmaBahcesiButton6_1"></activity>
+        <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_7" />
         <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_6" />
         <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_5" />
         <activity android:name=".AlgoritmaBahcesi5.AlgoritmaBahcesiButton5_4" />
