--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_6"></activity>
+        <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_7"></activity>
+        <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_6" />
         <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_5" />
         <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_4" />
         <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_3" />
