--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_9"></activity>
+        <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_10"></activity>
+        <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_9" />
         <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_8" />
         <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_7" />
         <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_6" />
