--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_2"></activity>
+        <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_3"></activity>
+        <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_2" />
         <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_1" />
         <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_11" />
         <activity android:name=".AlgoritmaBahcesi7.AlgoritmaBahcesiButton7_10" />
