--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_8"></activity>
+        <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_9"></activity>
+        <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_8" />
         <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_7" />
         <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_6" />
         <activity android:name=".AlgoritmaBahcesi8.AlgoritmaBahcesiButton8_5" />
