--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_3"></activity>
+        <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_4"></activity>
+        <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_3" />
         <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_2" />
         <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_1" />
         <activity android:name=".AlgoritmaBahcesi9.AlgoritmaBahcesiButton9_7" />
