--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_4"></activity>
+        <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_6"></activity>
+        <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_5" />
+        <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_4" />
         <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_3" />
         <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_2" />
         <activity android:name=".AlgoritmaBahcesi10.AlgoritmaBahcesiButton10_1" />
